[package]
name = "rojo-watcher"
version = "0.1.0"
description = "A CLI tool that watches folders and updates Rojo project files."
authors = ["cosinewaves"]
license = "MIT"
repository = "https://github.com/cosinewaves/rojo-watcher"
readme = "README.md"
categories = ["development-tools"]
keywords = ["rojo", "roblox", "watcher"]
edition = "2024"

[dependencies]
notify = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.12"
dialoguer = "0.11"
pathdiff = "0.2"